--- a/app/src/components/about/about.scss
+++ b/app/src/components/about/about.scss
@@ -15,6 +15,19 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
 
+    &_collapse {
+      max-height: 0;
+      overflow: hidden;
+      transition: max-height 0.5s ease; /* Transition douce pour dérouler */
+      opacity: 0;
+      transition: max-height 0.5s ease, opacity 0.5s ease;
+
+      &.expanded {
+        max-height: 500px; /* Ajuster la hauteur max en fonction du contenu */
+        opacity: 1;
+      }
+    }
+
     &_description {
       border-radius: 10px;
       background-color: rgba(216, 190, 156, 0.5); /* Meilleur contraste */
@@ -39,16 +52,12 @@
 
     &_button {
       width: 100%;
-      background-color: rgb(
-        210,
-        180,
-        140,
-        0.3
-      ); /* Meilleur contraste pour le bouton */
-      border: 1px solid rgb(210, 180, 140, 0.5);
+      background-color: rgba(210, 180, 140, 0.3);
+      border: 1px solid rgba(210, 180, 140, 0.5);
       border-radius: 5px;
-      padding: 1% 0% 1% 0%;
+      padding: 1% 0;
       font-weight: bold;
+      cursor: pointer;
     }
   }
 }
