--- a/app/src/components/card/card.scss
+++ b/app/src/components/card/card.scss
@@ -9,6 +9,7 @@
     transform: scale(1.1);
     transition: all 0.4s ease-out;
     z-index: 10;
+    cursor: pointer;
     .card_overlay {
       opacity: 1;
     }
