--- a/app/src/components/portfolio/portfolio.scss
+++ b/app/src/components/portfolio/portfolio.scss
@@ -14,7 +14,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 1rem;
-
+    padding-bottom: 2em;
     @media (max-width: 1260px) {
       grid-template-columns: 1fr 1fr;
     }
